# customer-service-agent

./: .gitignore  mlflow.db  pyproject.toml
.github/: copilot-instructions.md
agent/: customer-service-classification-agent.py  dspy-agent.ipynb  labels.json  mlflow.db
analyse/: gorgias-tickets-analysis.ipynb
clients/: __init__.py  gorgias.py
data/: classification_results.csv  classification_results.parquet  ticket_details.parquet  ticket_details_clean.parquet  ticket_details_new.parquet
rpcats/: pyproject.toml
rpcats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sop/: custom-charge.md  lost-in-transit.md  manage-quality-issue-resolution-using-gorgias-and-servicepoints.md  manage-wrong-order-issues-using-gorgias-and-servicepoints.md  manage-wrong-size-issues-in-customer-orders.md  order-alert-status.md  order-delay.md  out-of-stock-triggered-by-leadership.md  out-of-stock-triggered-by-order-delay-and-dispute.md  proactive-follow-up-order-delay.md  process-damaged-item-claims-using-gorgias-and-servicepoints  process-wrong-customization-issues-using-gorgias.md
