[project]
name = "rpcats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
include = ["clients*"]
