[project]
name = "rpcats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.25.1",
    "dspy>=3.1.2",
    "dspy-ai>=3.1.2",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "sqlparse>=0.5.5",
]

[tool.setuptools.packages.find]
include = ["clients*"]
